--- a/styles-page.css
+++ b/styles-page.css
@@ -174,10 +174,9 @@ h1 {
     }
 
     .music-player iframe {
-        width: 100%;
+        width: fit-content;
         max-width: 100%;
-        height: 0; /* Establecemos la altura a 0 inicialmente */
-        padding-bottom: 56.25%; /* Proporción 16:9 (100% / (16/9) = 56.25%) */
+        height: fit-content;
         border: none;
         object-fit: cover; /* Asegura que el contenido se ajuste sin bordes negros */
         position: relative; 
